--- a/style.css
+++ b/style.css
@@ -119,3 +119,11 @@ p{
     color: white;
     display: inline-block;
 }
+.footer{
+    text-align:center;
+}
+.footer p{
+    text-align:center;
+    font-size: 20px;
+    color:tomato;
+}
